fixes: contact position on small screens

--- a/src/blocks/contacts/contacts.css
+++ b/src/blocks/contacts/contacts.css
@@ -1,12 +1,12 @@
 .contacts{
-  margin-top: 40px;
+  margin-top: 100px;
   width: 1100px;
 }
 
 .contacts__box{
   display: grid;
   grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
-  gap: 40px;
+  gap: 50px;
 }
 
 .contacts__title{
@@ -33,7 +33,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 30px;
   text-align: start;
 }
@@ -76,6 +76,10 @@
   background-repeat: no-repeat;
 }
 
+.media__link:hover{
+  opacity: 0.7;
+}
+
 .media__link_site_github{
   background-image: url(../../images/github__icon.svg);
 }
@@ -93,10 +97,9 @@
 
 @media (max-width: 768px){
   .contacts{
-    display: grid;
-    grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
-    gap: 5px;
+    margin-top: 40px;
   }
+
   .texting__item{
     position: relative;
     margin-left: 41px;
@@ -110,11 +113,26 @@
   
 }
 
-@media (max-width: 708px){
+/* @media (max-width: 708px){
   .contacts{
     display: grid;
     grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
     gap: 5px;
+  }
+
+} */
+
+@media (max-width: 425px){
+
+  .contacts__title{
+    text-align: start;
+  }
+
+  .contacts__box{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
+    gap: 30px;
   }
 
 }
