--- a/src/blocks/portfolio/portfolio.css
+++ b/src/blocks/portfolio/portfolio.css
@@ -54,6 +54,7 @@
 .portfolio__link:hover {
   cursor: pointer;
   opacity: 0.7;
+  background-color: white;
 }
 
 .portfolio__photo{
@@ -100,4 +101,9 @@
     line-height: 16px;
     text-align: justify;
   }
+
+  .portfolio__link {
+    width: 200px;
+  }
+  
 }
